Wallet / Referral Tab / Fixed the icons and alignment

--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -832,7 +832,6 @@
         font-weight: bold;
         font-size: 24px;
         line-height: 30px;
-
         letter-spacing: -0.025em;
     }
     .subtitle {
@@ -841,7 +840,6 @@
         font-size: 16px;
         line-height: 30px;
         letter-spacing: -0.01em;
-        word-spacing: 7px;
     }
     .rewards-box {
         background-color: #242424;
